--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,35 +3,66 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ADAM Upload Dashboard</title>
+  <title>ADAM Console</title>
   <style>
     :root {
-      --bg: #0f172a;
-      --card: #111827;
-      --accent: #22c55e;
-      --accent-2: #38bdf8;
-      --text: #e2e8f0;
-      --muted: #94a3b8;
-      --border: #1f2937;
-      --danger: #f87171;
+      --bg: #0b0b0d;
+      --bg-2: #111116;
+      --card: #16161d;
+      --accent: #ffffff;
+      --accent-2: #d1d5db;
+      --text: #f5f5f7;
+      --muted: #a0a0a8;
+      --border: #26262f;
+      --shadow: rgba(0, 0, 0, 0.5);
     }
     * { box-sizing: border-box; }
     body {
       margin: 0;
-      font-family: "Segoe UI", system-ui, -apple-system, sans-serif;
-      background: radial-gradient(120% 120% at 10% 20%, rgba(34,197,94,0.15), transparent),
-                  radial-gradient(120% 120% at 80% 0%, rgba(56,189,248,0.2), transparent),
+      font-family: "Inter", "Segoe UI", system-ui, -apple-system, sans-serif;
+      background: radial-gradient(120% 120% at 20% 10%, rgba(255,255,255,0.05), transparent),
+                  radial-gradient(120% 120% at 80% 0%, rgba(255,255,255,0.04), transparent),
                   var(--bg);
       color: var(--text);
       min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
+    .layout {
+      display: grid;
+      grid-template-columns: 240px 1fr;
+      min-height: 100vh;
+    }
+    .sidebar {
+      background: linear-gradient(180deg, rgba(18,18,26,0.9), rgba(10,10,14,0.95));
+      border-right: 1px solid var(--border);
+      padding: 24px 18px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+    .sidebar h2 {
+      margin: 0 0 6px;
+      font-size: 18px;
+      color: var(--accent);
+    }
+    .nav-link {
+      display: block;
+      padding: 10px 12px;
+      color: var(--text);
+      text-decoration: none;
+      border-radius: 10px;
+      border: 1px solid transparent;
+      background: #0f0f14;
+    }
+    .nav-link:hover { border-color: var(--border); background: #13131b; }
     header {
       padding: 32px 28px 12px;
     }
     h1 {
       margin: 0;
       font-size: 26px;
-      letter-spacing: -0.5px;
+      letter-spacing: -0.4px;
     }
     p.lead {
       margin: 6px 0 0;
@@ -40,156 +71,95 @@
     }
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 18px;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 16px;
       padding: 12px 20px 28px;
+      flex: 1;
     }
     .card {
-      background: linear-gradient(145deg, rgba(17,24,39,0.9), rgba(15,23,42,0.9));
+      background: linear-gradient(160deg, var(--card), var(--bg-2));
       border: 1px solid var(--border);
       border-radius: 14px;
       padding: 18px;
-      box-shadow: 0 16px 40px rgba(0,0,0,0.25);
+      box-shadow: 0 18px 40px var(--shadow);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
-    .card h2 {
-      margin: 0 0 6px;
-      font-size: 18px;
-    }
-    .card small {
-      color: var(--muted);
-    }
-    label {
-      display: block;
-      margin: 14px 0 6px;
-      font-size: 13px;
-      color: var(--muted);
-    }
-    input[type="file"],
-    input[type="text"] {
-      width: 100%;
-      background: #0b1220;
-      border: 1px solid var(--border);
-      border-radius: 10px;
-      color: var(--text);
-      padding: 10px 12px;
-      font-size: 14px;
-    }
-    button {
-      margin-top: 16px;
+    .card h2 { margin: 0 0 6px; font-size: 18px; }
+    .card p { margin: 0 0 14px; color: var(--muted); font-size: 14px; }
+    a.button {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      gap: 6px;
+      text-decoration: none;
       background: linear-gradient(135deg, var(--accent), var(--accent-2));
-      color: #0b1220;
-      border: none;
-      border-radius: 10px;
+      color: #0b0b0d;
       padding: 12px 14px;
-      font-size: 14px;
-      font-weight: 600;
-      cursor: pointer;
-      width: 100%;
-      transition: transform 0.05s ease, box-shadow 0.2s ease;
-      box-shadow: 0 10px 30px rgba(34,197,94,0.25);
-    }
-    button:hover { transform: translateY(-1px); }
-    button:active { transform: translateY(0); }
-    pre {
-      background: #0b1220;
-      color: var(--accent-2);
-      padding: 12px;
       border-radius: 10px;
-      border: 1px solid var(--border);
-      overflow-x: auto;
-      max-height: 240px;
+      font-weight: 700;
+      letter-spacing: 0.1px;
+      box-shadow: 0 12px 30px rgba(255,255,255,0.12);
+      transition: transform 0.05s ease, box-shadow 0.2s ease;
     }
-    .status {
-      margin-top: 10px;
-      font-size: 13px;
+    a.button:hover { transform: translateY(-1px); }
+    footer {
+      padding: 12px 20px 24px;
       color: var(--muted);
+      font-size: 13px;
     }
-    .error { color: var(--danger); }
-    .success { color: var(--accent); }
   </style>
 </head>
 <body>
-  <header>
-    <h1>ADAM Upload Dashboard</h1>
-    <p class="lead">Upload PKB master and purchase files. Uses FastAPI endpoints directly.</p>
-  </header>
+  <div class="layout">
+    <aside class="sidebar">
+      <h2>Navigation</h2>
+      <a class="nav-link" href="pkb.html">PKB Upload</a>
+      <a class="nav-link" href="purchase.html">Purchase Upload</a>
+      <a class="nav-link" href="outlets.html">Outlet Admin</a>
+      <a class="nav-link" href="data.html">Data Viewer</a>
+    </aside>
+    <main>
+      <header>
+        <h1>ADAM Console</h1>
+        <p class="lead">Pick a workspace: PKB master, Purchase ingest, Outlets, or Data Viewer.</p>
+      </header>
 
-  <div class="grid">
-    <div class="card">
-      <h2>PKB Master Upload</h2>
-      <small>Accepts Excel: .xlsx / .xls / .xlsm / .xltx / .xltm</small>
-      <label for="pkb-file">Select file</label>
-      <input type="file" id="pkb-file" accept=".xlsx,.xls,.xlsm,.xltx,.xltm" />
-      <button onclick="uploadFile('pkb')">Upload PKB</button>
-      <div class="status" id="pkb-status"></div>
-      <pre id="pkb-output"></pre>
-    </div>
+      <div class="grid">
+        <div class="card">
+          <div>
+            <h2>PKB Upload</h2>
+            <p>Upload PKB master Excel to seed catalog data.</p>
+          </div>
+          <a class="button" href="pkb.html">Open PKB Upload</a>
+        </div>
+        <div class="card">
+          <div>
+            <h2>Purchase Upload</h2>
+            <p>Upload purchase Excel/CSV for processing and matching.</p>
+          </div>
+          <a class="button" href="purchase.html">Open Purchase Upload</a>
+        </div>
+        <div class="card">
+          <div>
+            <h2>Outlets</h2>
+            <p>Add or update outlet/site names and aliases for matching.</p>
+          </div>
+          <a class="button" href="outlets.html">Open Outlet Admin</a>
+        </div>
+        <div class="card">
+          <div>
+            <h2>Data Viewer</h2>
+            <p>View data and download CSV/Excel-friendly extracts.</p>
+          </div>
+          <a class="button" href="data.html">Open Data Viewer</a>
+        </div>
+      </div>
 
-    <div class="card">
-      <h2>Purchase Upload</h2>
-      <small>Accepts Excel/CSV: .xlsx / .xls / .xlsm / .xltx / .xltm / .csv</small>
-      <label for="purchase-file">Select file</label>
-      <input type="file" id="purchase-file" accept=".xlsx,.xls,.xlsm,.xltx,.xltm,.csv" />
-      <label for="uploaded-by">Uploaded by (optional)</label>
-      <input type="text" id="uploaded-by" placeholder="your.name@example.com" />
-      <button onclick="uploadFile('purchase')">Upload Purchase</button>
-      <div class="status" id="purchase-status"></div>
-      <pre id="purchase-output"></pre>
-    </div>
+      <footer>API base: http://localhost:8000/api/v1 (override via <code>window.API_BASE</code> in console)</footer>
+    </main>
   </div>
 
-  <script>
-    const API_BASE = window.API_BASE || "http://localhost:8000/api/v1";
-
-    async function uploadFile(kind) {
-      const fileInput = document.getElementById(`${kind}-file`);
-      const statusEl = document.getElementById(`${kind}-status`);
-      const outputEl = document.getElementById(`${kind}-output`);
-
-      statusEl.textContent = "";
-      outputEl.textContent = "";
-
-      if (!fileInput.files.length) {
-        statusEl.textContent = "Please choose a file.";
-        statusEl.className = "status error";
-        return;
-      }
-
-      const file = fileInput.files[0];
-      const formData = new FormData();
-      formData.append("file", file);
-
-      let url = "";
-      if (kind === "pkb") {
-        url = `${API_BASE}/pkb/upload-excel`;
-      } else {
-        url = `${API_BASE}/purchase/upload-excel`;
-        const uploadedBy = document.getElementById("uploaded-by").value.trim();
-        if (uploadedBy) {
-          formData.append("uploaded_by", uploadedBy);
-        }
-      }
-
-      statusEl.textContent = "Uploading...";
-      statusEl.className = "status";
-
-      try {
-        const res = await fetch(url, {
-          method: "POST",
-          body: formData,
-        });
-        const data = await res.json();
-        if (!res.ok) {
-          throw new Error(data.detail || res.statusText);
-        }
-        statusEl.textContent = "Success";
-        statusEl.className = "status success";
-        outputEl.textContent = JSON.stringify(data, null, 2);
-      } catch (err) {
-        statusEl.textContent = `Error: ${err.message}`;
-        statusEl.className = "status error";
-      }
-    }
-  </script>
 </body>
 </html>
