--- a/frontend/pkb.html
+++ b/frontend/pkb.html
@@ -35,7 +35,7 @@
       min-height: 100vh;
     }
     .sidebar {
-      background: linear-gradient(180deg, rgba(18,18,26,0.95), rgba(10,10,14,0.98));
+      background: #000000;
       border-right: 1px solid var(--border);
       padding: 20px 16px;
       display: flex;
@@ -45,20 +45,14 @@
     .brand {
       display: flex;
       align-items: center;
-      gap: 10px;
-      padding: 6px 4px 14px;
+      justify-content: center;
+      padding: 10px 4px 16px;
       border-bottom: 1px solid var(--border);
     }
     .brand img.logo-big {
-      height: 46px;
-      width: 46px;
+      height: 144px; /* ~1.5in at 96dpi */
+      width: 144px;
       object-fit: contain;
-    }
-    .brand .brand-text {
-      font-size: 18px;
-      font-weight: 700;
-      letter-spacing: 0.4px;
-      color: var(--text);
     }
     .nav-link {
       display: block;
@@ -77,11 +71,7 @@
       gap: 10px;
       justify-content: space-between;
     }
-    header img.logo {
-      height: 28px;
-      width: 28px;
-      object-fit: contain;
-    }
+    /* header logo removed */
     h1 { margin: 0; font-size: 24px; letter-spacing: -0.3px; }
     a.nav {
       color: var(--muted);
@@ -154,7 +144,6 @@
     <aside class="sidebar">
       <div class="brand">
         <img class="logo-big" src="assets/logo1.png" alt="ADAM logo" />
-        <div class="brand-text">ADAM</div>
       </div>
       <a class="nav-link" href="index.html">Dashboard</a>
       <a class="nav-link" href="pkb.html">PKB Upload</a>
@@ -165,7 +154,6 @@
 
     <main>
       <header>
-        <img class="logo" src="assets/logo1.png" alt="ADAM logo" />
         <div>
           <h1>PKB Upload</h1>
           <div style="color: var(--muted); font-size: 13px;">Upload PKB master Excel.</div>
