Remove ADAM branding placeholders

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ADAM Console</title>
+  <title>Console</title>
   <style>
     :root {
       --bg: #0b0b0d;
@@ -126,7 +126,7 @@
   <div class="layout">
     <aside class="sidebar">
       <div class="brand">
-        <img class="logo-big" src="assets/logo1.png" alt="ADAM logo" />
+        <img class="logo-big" src="assets/logo1.png" alt="App logo" />
       </div>
       <a class="nav-link" href="pkb.html">PKB Upload</a>
       <a class="nav-link" href="purchase.html">Purchase Upload</a>
@@ -136,7 +136,7 @@
     <main>
       <header>
         <div>
-          <h1>ADAM Console</h1>
+          <h1>Console</h1>
           <p class="lead">Pick a workspace: PKB master, Purchase ingest, Outlets, or Data Viewer.</p>
         </div>
       </header>
