--- a/frontend/data.html
+++ b/frontend/data.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Data Viewer • ADAM</title>
+  <title>Data Viewer</title>
   <style>
     :root {
       --bg: #060608;
@@ -147,7 +147,7 @@
   <div class="layout">
     <aside class="sidebar">
       <div class="brand">
-        <img class="logo-big" src="assets/logo1.png" alt="ADAM logo" />
+        <img class="logo-big" src="assets/logo1.png" alt="App logo" />
       </div>
       <a class="nav-link" href="index.html">Dashboard</a>
       <a class="nav-link" href="pkb.html">PKB Upload</a>
