--- a/frontend/data.html
+++ b/frontend/data.html
@@ -66,13 +66,21 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 8px 4px 16px;
+      padding: 12px 6px 16px;
       border-bottom: 1px solid var(--border);
+      background: radial-gradient(circle at 40% 35%, rgba(255,255,255,0.06), transparent 55%),
+                  radial-gradient(circle at 70% 70%, rgba(255,255,255,0.03), transparent 60%),
+                  #050507;
+      box-shadow:
+        inset 0 1px 0 rgba(255,255,255,0.05),
+        0 12px 30px rgba(0,0,0,0.35);
     }
     .brand img.logo-big {
-      height: 72px;
-      width: 72px;
+      height: 100px;
+      width: 100px;
       object-fit: contain;
+      filter: drop-shadow(0 10px 18px rgba(0,0,0,0.45));
+      transform: translateZ(0);
     }
     .nav-link {
       display: block;
@@ -147,7 +155,7 @@
   <div class="layout">
     <aside class="sidebar">
       <div class="brand">
-        <img class="logo-big" src="assets/logo1.png" alt="App logo" />
+        <img class="logo-big" src="assets/ring.png" alt="App logo" />
       </div>
       <a class="nav-link" href="index.html">Dashboard</a>
       <a class="nav-link" href="pkb.html">PKB Upload</a>
