--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,13 +45,21 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 10px 4px 16px;
+      padding: 14px 6px 18px;
       border-bottom: 1px solid var(--border);
+      background: radial-gradient(circle at 40% 35%, rgba(255,255,255,0.06), transparent 55%),
+                  radial-gradient(circle at 70% 70%, rgba(255,255,255,0.03), transparent 60%),
+                  #050507;
+      box-shadow:
+        inset 0 1px 0 rgba(255,255,255,0.05),
+        0 12px 30px rgba(0,0,0,0.35);
     }
     .brand img.logo-big {
-      height: 144px; /* ~1.5in at 96dpi */
-      width: 144px;
+      height: 120px;
+      width: 120px;
       object-fit: contain;
+      filter: drop-shadow(0 10px 18px rgba(0,0,0,0.45));
+      transform: translateZ(0);
     }
     
     .nav-link {
@@ -126,7 +134,7 @@
   <div class="layout">
     <aside class="sidebar">
       <div class="brand">
-        <img class="logo-big" src="assets/logo1.png" alt="App logo" />
+        <img class="logo-big" src="assets/ring.png" alt="App logo" />
       </div>
       <a class="nav-link" href="pkb.html">PKB Upload</a>
       <a class="nav-link" href="purchase.html">Purchase Upload</a>
