Redesign console with uploads/data hubs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -136,45 +136,30 @@
       <div class="brand">
         <img class="logo-big" src="assets/ring.png" alt="App logo" />
       </div>
-      <a class="nav-link" href="pkb.html">PKB Upload</a>
-      <a class="nav-link" href="purchase.html">Purchase Upload</a>
-      <a class="nav-link" href="outlets.html">Outlet Admin</a>
+      <a class="nav-link" href="index.html">Console</a>
+      <a class="nav-link" href="upload.html">Uploads</a>
       <a class="nav-link" href="data.html">Data Viewer</a>
     </aside>
     <main>
       <header>
         <div>
           <h1>Console</h1>
-          <p class="lead">Pick a workspace: PKB master, Purchase ingest, Outlets, or Data Viewer.</p>
+          <p class="lead">Pick a workspace: Uploads or Data Viewer.</p>
         </div>
       </header>
 
       <div class="grid">
         <div class="card">
           <div>
-            <h2>PKB Upload</h2>
-            <p>Upload PKB master Excel to seed catalog data.</p>
+            <h2>Uploads</h2>
+            <p>Upload PKB, Purchase, Closing Stock, Sales, or Perpetual files.</p>
           </div>
-          <a class="button" href="pkb.html">Open PKB Upload</a>
-        </div>
-        <div class="card">
-          <div>
-            <h2>Purchase Upload</h2>
-            <p>Upload purchase Excel/CSV for processing and matching.</p>
-          </div>
-          <a class="button" href="purchase.html">Open Purchase Upload</a>
-        </div>
-        <div class="card">
-          <div>
-            <h2>Outlets</h2>
-            <p>Add or update outlet/site names and aliases for matching.</p>
-          </div>
-          <a class="button" href="outlets.html">Open Outlet Admin</a>
+          <a class="button" href="upload.html">Open Uploads</a>
         </div>
         <div class="card">
           <div>
             <h2>Data Viewer</h2>
-            <p>View data and download CSV/Excel-friendly extracts.</p>
+            <p>View datasets and download CSV/Excel extracts.</p>
           </div>
           <a class="button" href="data.html">Open Data Viewer</a>
         </div>
