Loosen CORS and align data viewer endpoints

--- a/frontend/data.html
+++ b/frontend/data.html
@@ -189,17 +189,17 @@
       closing: {
         title: "Closing Stock Data",
         desc: "Barcode + outlet + qty snapshot.",
-        endpoint: `${API_BASE}/closing?limit=200&offset=0`,
+        endpoint: `${API_BASE}/closing/?limit=200&offset=0`,
       },
       sales: {
         title: "Sales Data",
         desc: "Sales rows (date, qty, value) per outlet.",
-        endpoint: `${API_BASE}/sales?limit=200&offset=0`,
+        endpoint: `${API_BASE}/sales/?limit=200&offset=0`,
       },
       perpetual: {
         title: "Perpetual Data",
         desc: "Perpetual outlet-level stock for reconciliation.",
-        endpoint: `${API_BASE}/perpetual?limit=200&offset=0`,
+        endpoint: `${API_BASE}/perpetual/?limit=200&offset=0`,
       },
       outlets: {
         title: "Outlets",
