--- a/frontend/data.html
+++ b/frontend/data.html
@@ -310,20 +310,20 @@
         return;
       }
       const headers = Object.keys(stateRows[0]);
+      const delimiter = "\t"; // Excel-friendly (TSV avoids comma locale issues)
       const escape = (v) => {
         if (v === null || v === undefined) return "";
-        const s = String(v).replace(/"/g, '""');
-        return /[\",\\r\\n]/.test(s) ? `"${s}"` : s;
+        return String(v).replace(/\t/g, " ").replace(/\r?\n/g, " ");
       };
       const csv = [
-        headers.join(","),
-        ...stateRows.map(r => headers.map(h => escape(r[h])).join(",")),
+        headers.join(delimiter),
+        ...stateRows.map(r => headers.map(h => escape(r[h])).join(delimiter)),
       ].join("\\r\\n");
-      const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
+      const blob = new Blob([csv], { type: "text/tab-separated-values;charset=utf-8;" });
       const url = URL.createObjectURL(blob);
       const a = document.createElement("a");
       a.href = url;
-      a.download = `${currentKey || "export"}-export.csv`;
+      a.download = `${currentKey || "export"}-export.tsv`;
       document.body.appendChild(a);
       a.click();
       document.body.removeChild(a);
