--- a/frontend/data.html
+++ b/frontend/data.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Data Viewer</title>
   <link rel="stylesheet" href="common.css" />
+  <script src="api-base.js"></script>
   <style>
     header {
       padding: 28px 24px 12px;
@@ -125,7 +126,7 @@
       window.location.href = "login.html";
     }
 
-    const API_BASE = window.API_BASE || "http://localhost:8000/api/v1";
+    const API_BASE = window.API_BASE;
     const datasets = {
       pkb: {
         title: "PKB Data",
