--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Uploads</title>
   <link rel="stylesheet" href="common.css" />
+  <script src="api-base.js"></script>
   <style>
     header {
       padding: 28px 24px 12px;
@@ -106,7 +107,7 @@
   </div>
 
   <script>
-    const API_BASE = window.API_BASE || "http://localhost:8000/api/v1";
+    const API_BASE = window.API_BASE;
     const AUTH_KEY = "audit_auth";
     const raw = localStorage.getItem(AUTH_KEY);
     const role = (() => {
