--- a/frontend/purchase.html
+++ b/frontend/purchase.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Purchase Upload</title>
+  <script src="api-base.js"></script>
   <style>
     :root {
       --bg: #0b0b0d;
@@ -186,7 +187,7 @@
   </div>
 
   <script>
-    const API_BASE = window.API_BASE || "http://localhost:8000/api/v1";
+    const API_BASE = window.API_BASE;
 
     async function uploadPurchase() {
       const fileInput = document.getElementById("purchase-file");
