--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -151,10 +151,10 @@
         endpoint: `${API_BASE}/sales/upload-excel`,
         accept: ".xlsx,.xls,.xlsm,.xltx,.xltm,.csv",
       },
-      perpetual: {
-        title: "Perpetual Closing Upload",
-        desc: "Upload perpetual closing for reconciliation.",
-        endpoint: `${API_BASE}/perpetual/upload-excel`,
+      grt: {
+        title: "Purchase Return (GRT) Upload",
+        desc: "Upload purchase returns (GRT No., barcode, qty, date, outlet).",
+        endpoint: `${API_BASE}/grt/upload-excel`,
         accept: ".xlsx,.xls,.xlsm,.xltx,.xltm,.csv",
       },
     };
