Add admin Outlet Manager with outlet and alias CRUD

--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -79,6 +79,7 @@
       <a class="nav-link active" href="upload.html" data-roles="admin,manager">Uploads</a>
       <a class="nav-link" href="data.html" data-roles="admin,manager">Data Viewer</a>
       <a class="nav-link" href="user-manager.html" data-roles="admin">User Manager</a>
+      <a class="nav-link" href="outlet-manager.html" data-roles="admin">Outlet Manager</a>
       <button class="nav-link" style="text-align:left; border:1px solid var(--border);" onclick="logout()" data-roles="admin,manager,user">Logout</button>
     </aside>
 
