--- a/frontend/user-manager.html
+++ b/frontend/user-manager.html
@@ -33,6 +33,7 @@
       <a class="nav-link" href="upload.html" data-roles="admin,manager">Uploads</a>
       <a class="nav-link" href="data.html" data-roles="admin,manager">Data Viewer</a>
       <a class="nav-link active" href="user-manager.html" data-roles="admin">User Manager</a>
+      <a class="nav-link" href="outlet-manager.html" data-roles="admin">Outlet Manager</a>
       <button class="nav-link" style="text-align:left; border:1px solid var(--border);" onclick="logout()" data-roles="admin">Logout</button>
     </aside>
     <main>
